--- a/wp-content/themes/hestia-child/style.css
+++ b/wp-content/themes/hestia-child/style.css
@@ -8,6 +8,6 @@ Template: hestia
 Version: 0.1
 */
 .main-raised {
-  background-color: red !important; }
+  background-color: blue !important; }
 
 /*# sourceMappingURL=style.css.map */
